# faqmy-backend

./: Dockerfile  README.md  Taskfile.yml  alembic.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_added_stack_s_new_fields_color_and_.py  0003_added_stack_es_doc_id_the_same_place_.py  0004_set_foreignkey_cascade_policy.py  0005_change_card_s_question_and_answer_field_.py
src/faqmy_backend/: __main__.py  conf.py
src/faqmy_backend/app/: __init__.py  asgi.py  builder.py  responses.py  schemas.py
src/faqmy_backend/app/dependencies/: __init__.py
src/faqmy_backend/app/middleware/: process_time.py
src/faqmy_backend/app/routes/: billing.py  client.py  dashboard.py  healthcheck.py  users.py
src/faqmy_backend/db/: connection.py  exceptions.py  utils.py
src/faqmy_backend/db/models/: __init__.py  base.py  conversations.py  stack.py  users.py
src/faqmy_backend/db/repositories/: base.py  cards.py  conversation.py  message.py  stack.py
src/faqmy_backend/services/: bot.py  email.py  template.py
src/faqmy_backend/templates/email/: _includes.html  confirm_email.html  forget_password.html  (+2 more)
src/faqmy_backend/users/: auth_backends.py  db.py  manager.py  schemas.py  strategies.py  transports.py
tests/: conftest.py
tests/db/: test_internal.py
tests/db/repositories/: conftest.py  test_conversation_repository.py  test_message_repository.py  test_stack_repository.py
tests/services/: test_bot.py
tests/web/: conftest.py  test_client.py
tests/web/dashboard/: conftest.py  test_card.py  test_conversation.py  test_stack.py
